Fix hide time input alignment

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -3051,6 +3051,7 @@ p {
   display: flex;
   align-items: center;
   gap: 10px;
+  padding-top: 5px;
 }
 
 .form-toggle-label {
